# devel

./: .config  .dockerignore  .env.example  .gitguardian.yaml  .gitignore  .gitmodules  .ignore  .markdownlint-cli2.yaml  .markdownlint.jsonc  .marksman.toml  .nxignore  .secrets.baseline  .spacemacs  AGENTS.md  CENTRALIZED_MCP_DOCUMENTATION.md  CLOJURE.md  OPENCODE-SESSIONS-INDEXER.md  README.md  REPOSITORY_INDEX.md  analyze_skills.py  bb.edn  centralized-clojure-mcp.edn  cleanup-empty-opencode-sessions.mjs  clojure-dev.clj  dependencies.md  deps.edn  deps.edn.backup  desktop  docker-compose.mcp.yaml  docker-compose.yml  ecosystem.cljs  ecosystem.config.cjs  ecosystem.config.enhanced.mjs  ecosystem.pm2.edn  eslint.config.mjs  generate_full_graph.py  graph.json  hack.md  hack.py  hack.sh  (+41 more)
.clobber/: index.cjs  index.cjs.map  index.js
.config/: opencode
.cpcache/: 1444869464.basis  (+11 more)
projects/webring-sites/fork-tales-site/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build_site.py  compose.yaml  pyproject.toml  server.py  spec.md  start.sh  stop.sh
projects/webring-sites/fork-tales-site/deploy/: Caddyfile.template  production.env.example
projects/webring-sites/fork-tales-site/fork_tales_api/: app.py  retrieval.py  schemas.py  service.py  settings.py
projects/webring-sites/fork-tales-site/scripts/: deploy-remote.sh  verify-live.sh
projects/webring-sites/fork-tales-site/specs/: backend-rewrite-fastapi.md
projects/webring-sites/fork-tales-site/src/: app.js  index.html  styles.css
projects/webring-sites/fork-tales-site/tests/: test_app.py
(+2376 files in other folders)
